Started working on twitch page

--- a/StreamTools/StreamTools/Components/Layout/NavMenu.razor
+++ b/StreamTools/StreamTools/Components/Layout/NavMenu.razor
@@ -18,6 +18,16 @@
                     Home <BarIcon IconName="IconName.Dashboard"/>
                 </BarLink>
             </BarItem>
+            <BarItem>
+                <BarLink To="twitch" Match="Match.All">
+                    Twitch <BarIcon IconName="IconName.Camera"/>
+                </BarLink>
+            </BarItem>
+            <BarItem>
+                <BarLink To="youtube" Match="Match.All">
+                    Youtube <BarIcon IconName="IconName.Map" />
+                </BarLink>
+            </BarItem>
         </BarStart>
     </BarMenu>
 </Bar>
