--- a/StreamTools/StreamTools/Components/Routes.razor
+++ b/StreamTools/StreamTools/Components/Routes.razor
@@ -19,7 +19,13 @@
        {
                 Primary = "#79c6db",
                 Dark = "#1e1e1e",
-                Light = "#eeeeee"
+                Light = "#eeeeee",
+
+       },
+       TextColorOptions = new()
+       {
+                Primary = "#FFFFFF",
+                Body = "#FFFFFF"
        }
     };
 }
