--- a/StreamTools/StreamTools/Components/_Imports.razor
+++ b/StreamTools/StreamTools/Components/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Blazorise
 @using Blazorise.Animate
 @using Blazorise.Components
+@using Blazorise.DataGrid
 @using Blazorise.LoadingIndicator
 @using Blazorise.SpinKit
 @using Blazorise.Snackbar
