--- a/StreamTools/StreamTools/wwwroot/css/app.css
+++ b/StreamTools/StreamTools/wwwroot/css/app.css
@@ -73,6 +73,13 @@ h1:focus {
     display: none;
 }
 
+#app > section > section > main > div.row.justify-content-between > div:nth-child(2) {
+    display: none!important
+}
+#app > section > section > main > div.row.justify-content-between > div.col-auto.d-flex.flex-row-reverse {
+    display: none!important
+}
+
 @supports (-webkit-touch-callout: none) {
     .status-bar-safe-area {
         display: flex;
