--- a/StreamTools/StreamTools/App.xaml
+++ b/StreamTools/StreamTools/App.xaml
@@ -4,20 +4,18 @@
              xmlns:local="clr-namespace:StreamTools"
              x:Class="StreamTools.App">
     <Application.Resources>
+        <ResourceDictionary Source="Colors.xaml" />
         <ResourceDictionary>
-
-            <Color x:Key="PageBackgroundColor">#512bdf</Color>
-            <Color x:Key="PrimaryTextColor">White</Color>
-
             <Style TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
+                <Setter Property="TextColor" Value="{DynamicResource SecondaryBrush}" />
                 <Setter Property="FontFamily" Value="RobotoRegular" />
+                <Setter Property="FontSize" Value="16" />
             </Style>
 
             <Style TargetType="Button">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
+                <Setter Property="TextColor" Value="{DynamicResource SecondaryBrush}" />
                 <Setter Property="FontFamily" Value="RobotoRegular" />
-                <Setter Property="BackgroundColor" Value="#2b0b98" />
+                <Setter Property="BackgroundColor" Value="{DynamicResource PrimaryColor}" />
                 <Setter Property="Padding" Value="14,10" />
             </Style>
 
